--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.06.2022 08:49:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.06.2022 09:11:16</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -140,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Bengalske kari s kousky rybich filetu, paprikami, cuketami a panc phoron, jasminova ryze 149</li><li>Peceny filet z cerstveho morskeho vlka a norskeho lososa se salsou z cerstvych rajcat a bylinek, pecene brambory, salatek 175</li><li>Nam prik ong – thajske restovane veprove s chilli, rajcaty, krevetovou pastou a koriandrem, thajska lepkava ryze, salatek 149</li><li>Spagety s nudlickami hoveziho flank steaku, jalapenos, rimskym salatem, petrzelkovym pestem a zralou goudou {L} 175</li><li>Kapustove placicky s petrzelkou a spetkou muskatu, bramborovy salat s cervenou repou, zelenou cibulkou a majonezou {L} 149</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s olivami a susenymi rajcaty, cockovy salat s okurkami, zelenou cibulkou, bylinkami a zeleninou 149</li><li>Peceny filet z cerstveho candata s olivami a susenymi rajcaty, cockovy salat s okurkami, zelenou cibulkou, bylinkami a zeleninou 179</li><li>Burrito s mexickym carnitas {pikantni trhane veprove} s paprikami a goudou, pecene brambory, salatek {L} 149</li><li>Italske houbove rizoto s hovezim flank steakem, parmezanem a lanyzovym olejem, salatek 175</li><li>Zapecene zampiony plnene syrem raclette s listovym spenatem, stouchane brambory se zelenou cibulkou, salatek 149</li></ol>
 </td>
 </tr>
 </table>
